Minor changes to histogram and linear viewer